--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-responsive-dimensions": "^3.1.1"
+    "react-native-responsive-dimensions": "^3.1.1",
+    "expo-clipboard": "~6.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
