--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
-    "expo": "~51.0.28",
-    "expo-font": "~12.0.10",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.7",
+    "expo-clipboard": "~7.0.0",
+    "expo-font": "~13.0.1",
+    "expo-status-bar": "~2.0.0",
     "moment": "^2.30.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-responsive-dimensions": "^3.1.1",
-    "expo-clipboard": "~6.0.3"
+    "react": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-responsive-dimensions": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
