--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-responsive-dimensions": "^3.1.1"
   },
   "devDependencies": {
