--- a/app.json
+++ b/app.json
@@ -23,8 +23,9 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": [
-      "expo-font"
-    ]
+    "plugins": ["expo-font"],
+    "extra": {
+      "BASE_URL": "http://172.20.10.13/"
+    }
   }
 }
