--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.2",
-    "react-native-dotenv": "^3.4.11",
-    "react-native-responsive-dimensions": "^3.1.1"
+    "react-native-responsive-dimensions": "^3.1.1",
+    "expo-constants": "~17.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
